Adding jvm args to gradle build