@@ -7,6 +7,11 @@ android {
     defaultConfig {
         minSdkVersion 21
     }
+    testOptions {
+        unitTests.all {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        }
+    }
 }
 
 dependencies {
